--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -72,6 +72,8 @@ android {
 
     buildTypes {
         release {
+            shrinkResources false
+            minifyEnabled false
             signingConfig signingConfigs.release
         }
     }
